fix div spliing out of container

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -27,8 +27,8 @@ h3 {
 
 #profile-loading {
   position: absolute;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   top: 0;
   left: 0;
   background-color: var(--maskbg);
